fix: made append button tag

--- a/src/components/InputPassword/style.scss
+++ b/src/components/InputPassword/style.scss
@@ -6,6 +6,8 @@
   height: 100%;
   cursor: pointer;
   user-select: none;
+  background-color: transparent;
+  border: none;
 
   img {
     width: 12px;
