feat: add some vars

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,10 @@
 :root {
   --header-height: 60px;
   --header-padding-x: 24px;
+  --gutter: 22px;
   --z-modal: 100;
+  --z-fixed: 50;
+  --text-light-color: #999999;
 }
 
 html {
