--- a/src/components/layouts/Default/style.scss
+++ b/src/components/layouts/Default/style.scss
@@ -11,19 +11,21 @@
 .default-layout__menu {
   $width: 224px;
 
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: $width;
   height: 100%;
   transition-duration: 0.3s;
   transition-timing-function: ease;
-  transition-property: left;
+  transition-property: left, opacity;
   z-index: calc(var(--z-modal) + 10);
   box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.3);
+  opacity: 1;
 
   &--hidden {
     left: -$width;
+    opacity: 0;
   }
 }
 
@@ -34,6 +36,13 @@
   width: 100%;
   height: 100%;
   padding-left: var(--header-padding-x);
+}
+
+.default-layout__content {
+  margin-left: var(--gutter);
+  margin-right: var(--gutter);
+  padding-top: var(--gutter);
+  padding-bottom: var(--gutter);
 }
 
 .modal-backdrop {
