--- a/src/components/pages/LoginOrRegister/style.scss
+++ b/src/components/pages/LoginOrRegister/style.scss
@@ -6,11 +6,18 @@
 }
 
 .login-register__heading {
-  position: absolute;
-  opacity: 0;
-  pointer-events: none;
-  width: 0;
-  height: 0;
+  font-weight: bold;
+  font-size: 18px;
+  color: #404064;
+  margin-bottom: 20px;
+
+  &--hidden {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+    width: 0;
+    height: 0;
+  }
 }
 
 .login-register__content {
