--- a/src/components/pages/Profile/style.scss
+++ b/src/components/pages/Profile/style.scss
@@ -20,4 +20,10 @@
   border-radius: 2px;
   width: 100%;
   min-height: 10px;
+  padding: 24px;
+}
+
+.profile__error {
+  margin-top: 18px;
+  color: #ee4141;
 }
